[metadata]
name = kankei
version = 0.3.0
description = CLI utils to do relational database operations on CSVs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LocalToasty/kankei
project_urls =
    Bug Tracker = https://github.com/LocalToasty/kankei/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openpyxl~=3.0
    pandas~=1.4
    tabulate~=0.9

[options.entry_points]
console_scripts =
    tcat = kankei.tcat:main
    tjoin = kankei.tjoin:main
    tselect = kankei.tselect:main
